# simple_web_server_from_scratch

./: Cargo.toml  LICENSE  README.md
ServerRoot/: 404.html
src/: lib.rs  main.rs
